# twyne-liquidation-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  application.py  compose.yaml  foundry.toml  liquidationSetup.sh  pyproject.toml  remappings.txt  shell.nix  sweep-liq-funds.sh  test_aave_liquidation.py
.github/workflows/: common_check.yaml  dev.yml  release.yml
app/: __init__.py  config.yaml
app/liquidation/: account_monitor.py  bot_manager.py  config_loader.py  contracts.py  decorators.py  event_listener.py  exceptions.py  logging_config.py  models.py  notifications.py  routes.py  swap_1inch.py  withdraw.py
app/liquidation/vaults/: __init__.py  aave_vault.py  base_vault.py  euler_vault.py  registry.py
contracts/: AaveV3ATokenWrapper.json  AaveV3CollateralVault.json  AaveV3Pool.json  CollateralVault.json  CollateralVaultFactory.json  DeployAaveLiquidator.s.sol  DeployHealthStatViewer.s.sol  DeployLiquidator.s.sol  EulerCollateralVault.json  EulerRouter.json  HealthStatViewer.json  HealthStatViewer.sol  IERC20.json  IEulerCollateralVault.sol  OneInch.json  TwyneAaveLiquidator.sol  TwyneLiquidator.sol  VaultManager.json
contracts/Swaps/: ISwapper.sol  RevertBytes.sol
contracts/Swaps/handlers/: BaseHandler.sol
redstone_script/: pnpm-lock.yaml
test/: AaveLiquidatorTest.t.sol  HealthStatViewerTest.t.sol  LiquidatorTest.t.sol  MockSwapper.sol  conftest.py  test_collateral_vault.py  test_config_loader.py  test_notifications.py  test_scheduling.py
